# Programacion-multimedia-y-dispositivos-moviles

./: README.md
NEnLinea/: package-lock.json
NEnLinea/N-EnLinea/app/: index.tsx
NEnLinea/N-EnLinea/components/: Board.tsx  Game.tsx  OnlineGame.tsx  PlayAgainButton.tsx
NEnLinea/N-EnLinea/lib/: Conexion.ts
NEnLinea/tictactoe-server/: README.md  main.py
TresEnLinea/: app.json  index.html  package-lock.json  package.json
TresEnLinea/app/: index.tsx
TresEnLinea/components/: Board.tsx  Buttons.tsx  Game.tsx  PlayAgainButton.tsx  Square.tsx
TresEnLinea/lib/: Conexion.ts
examen/splitexpenser-back/: README.md  main.py  pyproject.toml  test_main.py
examen/splitexpenser-back/instance/: splitexpenser.db
examen/splitexpenser-front/: .env  app.config.js  app.json  enunciado.txt  package-lock.json  package.json
examen/splitexpenser-front/app/: _layout.tsx  groupdetail.tsx  index.tsx  login.tsx  register.tsx
examen/splitexpenser-front/context/: AuthContext.tsx
tictactoe-back/: main.py  pyproject.toml  test_main.py
