[project]
name = "tictactoe-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-restx>=1.3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-flask>=1.3.0",
]
